5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4367/executions/1613_1802.log
== TEST (2019-04-04 19:23:07) 
-- CODE:
from math import*
P= int(input("escolha a vida:"))
d1= int(input("escolha um numero"))
d2= int(input("escolha um numero"))
dano= int(sqrt((5*d1)+pi*(d2/3))
-- ERROR:
File "XXXX", line 6
    
                                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:26:59) 
-- CODE:
from math import*
P= int(input("escolha a vida:"))
d1= int(input("escolha um numero"))
d2= int(input("escolha um numero"))
dano= int(sqrt(5*d1)+pi**(d2/3))
df= P-dano
print(df)

-- OUTPUT:
188
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 19:27:09) 
-- CODE:
from math import*
P= int(input("escolha a vida:"))
d1= int(input("escolha um numero"))
d2= int(input("escolha um numero"))
dano= int(sqrt(5*d1)+pi**(d2/3))
df= P-dano
print(df)

-- EXECUTION TIME:
0.185609
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
285
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
